no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 0b43445b1fe46e1b0e9b4c603c4f47fe1cc36a90

--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-te/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-te/strings.xml
@@ -864,6 +864,20 @@ name
 "
 mozac_feature_prompt_login_add_username_headline
 "
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 ?
 <
@@ -1850,6 +1864,34 @@ ignore
 =
 "
 UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+dismiss
+the
+suggested
+strong
+password
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_dismiss
 "
 >
 <
