--- a/mobile/android/android-components/components/feature/search/src/main/res/values-te/strings.xml
+++ b/mobile/android/android-components/components/feature/search/src/main/res/values-te/strings.xml
@@ -71,6 +71,39 @@ search_widget_text_long
 string
 >
 <
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Voice
+search
+-
+-
+>
+<
+string
+name
+=
+"
+search_widget_voice
+"
+>
+<
+/
+string
+>
+<
 /
 resources
 >
