--- a/mobile/android/fenix/app/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fy-rNL/strings.xml
@@ -1606,6 +1606,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Us
 meast
@@ -1654,6 +1668,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Mear
@@ -3538,6 +3566,66 @@ icon
 used
 to
 add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+%
+1
+s
+tafoegje
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
 extensions
 .
 -
@@ -3549,6 +3637,20 @@ name
 =
 "
 browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Utwreiding
@@ -21088,6 +21190,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 Bl
 dwizers
@@ -21165,6 +21281,225 @@ Itemmenu
 foar
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+Noch
+gjin
+bl
+dwizers
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+not
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_description
+"
+>
+Bewarje
+websites
+as
+jo
+sneupe
+.
+Meld
+jo
+oan
+om
+bl
+dwizers
+fan
+oare
+syngronisearre
+apparaten
+op
+te
+heljen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+Oanmelde
+om
+te
+syngronisearjen
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_authenticated_description
+"
+>
+Bewarje
+websites
+as
+jo
+sneupe
+.
+Wy
+helje
+ek
+bl
+dwizers
+fan
+oare
+syngronisearre
+apparaten
+op
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+Foegje
+bl
+dwizers
+ta
+wylst
+jo
+sneupe
+sadat
+jo
+jo
+favorite
+websites
+letter
+fine
+kinne
+.
 <
 /
 string
@@ -41958,6 +42293,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Untdek
 oft
@@ -42012,6 +42361,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -42052,6 +42408,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Binne
@@ -42103,6 +42473,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -50157,6 +50534,45 @@ CFR
 s
 opnij
 inisjalisearje
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+-
+debugark
 <
 /
 string
