--- a/mobile/android/fenix/app/src/main/res/values-te/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-te/strings.xml
@@ -4061,47 +4061,6 @@ string
 Preference
 for
 changing
-where
-the
-toolbar
-is
-positioned
--
--
->
-<
-string
-name
-=
-"
-preferences_toolbar
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-changing
 default
 theme
 to
@@ -5561,6 +5520,13 @@ name
 =
 "
 fxa_received_tab_channel_description
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
@@ -8344,6 +8310,20 @@ name
 "
 rename_top_site
 "
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -9128,6 +9108,34 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -9677,6 +9685,37 @@ name
 =
 "
 bookmark_name_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+text
+input
+field
+for
+a
+bookmark
+or
+folder
+name
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_name_label_normal_case
 "
 >
 <
@@ -12203,6 +12242,13 @@ name
 "
 sync_connect_device_dialog
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 .
@@ -14122,6 +14168,13 @@ name
 "
 sign_in_instructions
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 !
@@ -14266,6 +14319,13 @@ name
 =
 "
 sign_in_create_account_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -19593,6 +19653,13 @@ name
 "
 synced_tabs_no_tabs
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 .
@@ -19807,6 +19874,20 @@ name
 "
 top_sites_rename_dialog_ok
 "
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -19866,6 +19947,36 @@ name
 =
 "
 top_sites_menu_settings
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+caption
+to
+confirm
+the
+edit
+of
+the
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_save
 "
 >
 <
@@ -20353,6 +20464,20 @@ name
 =
 "
 review_quality_check_beta_flag
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Beta
@@ -21209,6 +21334,335 @@ Micro
 survey
 -
 -
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+For
+a
+language
+list
+item
+that
+was
+downloaded
+the
+user
+can
+now
+delete
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+download_languages_item_content_description_downloaded_state
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+dialog
+used
+by
+the
+translations
+feature
+to
+confirm
+deleting
+a
+language
+.
+-
+-
+>
+<
+string
+name
+=
+"
+delete_language_file_dialog_positive_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+dialog
+used
+by
+the
+translations
+feature
+to
+cancel
+deleting
+a
+language
+.
+-
+-
+>
+<
+string
+name
+=
+"
+delete_language_file_dialog_negative_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+dialog
+used
+by
+the
+translations
+feature
+confirms
+canceling
+a
+download
+in
+progress
+for
+a
+language
+file
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cancel_download_language_file_dialog_positive_button_text
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+dialog
+used
+by
+the
+translations
+feature
+to
+dismiss
+the
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cancel_download_language_file_negative_button_text
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+data
+saving
+mode
+warning
+dialog
+used
+by
+the
+translations
+feature
+to
+allow
+users
+to
+cancel
+the
+action
+and
+not
+perform
+a
+download
+of
+the
+language
+file
+.
+-
+-
+>
+<
+string
+name
+=
+"
+download_language_file_dialog_negative_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+continue
+button
+label
+-
+-
+>
+<
+string
+name
+=
+"
+micro_survey_continue_button_label
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+"
+X
+"
+button
+that
+is
+closing
+microsurvey
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_close_button_content_description
+"
+>
+<
+/
+string
 >
 <
 /
