--- a/mobile/android/android-components/components/feature/customtabs/src/main/res/values-te/strings.xml
+++ b/mobile/android/android-components/components/feature/customtabs/src/main/res/values-te/strings.xml
@@ -45,6 +45,48 @@ mozac_feature_customtabs_share_link
 string
 >
 <
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Description
+of
+the
+menu
+button
+in
+the
+Custom
+Tabs
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_customtabs_menu_button
+"
+>
+<
+/
+string
+>
+<
 /
 resources
 >
