--- a/mobile/android/focus-android/app/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-fy-rNL/strings.xml
@@ -15916,6 +15916,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sleep
 fan
@@ -15968,6 +15982,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sleep
 fan
@@ -15982,6 +16010,149 @@ om
 it
 folslein
 skerm
+f
+te
+sluten
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Sleep
+fan
+de
+boppekant
+f
+&
+amp
+;
+br
+k
+it
+gebear
+werom
+om
+f
+te
+sluten
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Sleep
+fan
+de
+boppekant
+f
+&
+amp
+;
+druk
+it
+gebear
+werom
+om
 f
 te
 sluten
