--- a/mobile/android/focus-android/app/src/main/res/values-hu/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-hu/strings.xml
@@ -17000,6 +17000,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 A
 teljes
@@ -17055,6 +17069,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 A
 teljes
@@ -17078,6 +17106,146 @@ meg
 a
 Vissza
 gombot
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+H
+zza
+fel
+lr
+l
+s
+haszn
+lja
+a
+vissza
+gesztust
+a
+kil
+p
+shez
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+H
+zza
+fel
+lr
+l
+s
+nyomja
+meg
+a
+vissza
+gombot
+a
+kil
+p
+shez
 <
 /
 string
