--- a/mobile/android/focus-android/app/src/main/res/values-nl/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-nl/strings.xml
@@ -15837,6 +15837,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sleep
 vanaf
@@ -15887,6 +15901,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sleep
 vanaf
@@ -15900,6 +15928,145 @@ om
 het
 volledig
 scherm
+af
+te
+sluiten
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Sleep
+vanaf
+de
+bovenkant
+&
+amp
+;
+gebruik
+het
+gebaar
+terug
+om
+af
+te
+sluiten
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Sleep
+vanaf
+de
+bovenkant
+&
+amp
+;
+druk
+op
+terug
+om
 af
 te
 sluiten
