--- a/mobile/android/focus-android/app/src/main/res/values/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values/strings.xml
@@ -6980,6 +6980,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Close
 <
