Bug 1917855 - Update add-on manager UI for soft-blocking.  r=amejiamarmol,android-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D223703

UltraBlame original commit: 3913328104207c6de821b0135b0492a3e6f00775

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values/strings.xml
@@ -4209,13 +4209,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4269,6 +4285,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4287,6 +4319,40 @@ install
 this
 extension
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Can
+t
+install
+extension
 <
 /
 string
@@ -4657,6 +4723,64 @@ supported
 on
 this
 platform
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+violates
+Mozilla
+s
+policies
+and
+can
+t
+be
+installed
 .
 <
 /
@@ -5682,6 +5806,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+See
+details
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5737,6 +5896,133 @@ security
 or
 stability
 issues
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+This
+extension
+violates
+Mozilla
+s
+policies
+and
+has
+been
+disabled
+.
+You
+can
+enable
+it
+but
+this
+may
+be
+risky
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+This
+extension
+violates
+Mozilla
+s
+policies
+.
+Using
+it
+may
+be
+risky
 .
 <
 /
