Bug 1922340 - Removal of unsused strings r=android-reviewers,gmalekpour
Differential Revision: https://phabricator.services.mozilla.com/D224364

UltraBlame original commit: bd7a41654acb39a0203cdb760456d7d7653e1977

--- a/mobile/android/android-components/components/browser/menu/src/main/res/values/strings.xml
+++ b/mobile/android/android-components/components/browser/menu/src/main/res/values/strings.xml
@@ -274,6 +274,20 @@ name
 "
 action_bar_up_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Navigate
 up
