no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 0bcf3c1c03dae3cbc4ba64e825b65e004f4b7540

--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-ar/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-ar/strings.xml
@@ -2345,6 +2345,124 @@ string
 !
 -
 -
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_2
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_3
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Pressing
 this
 will
@@ -2908,6 +3026,38 @@ string
 !
 -
 -
+Option
+in
+the
+expanded
+select
+card
+prompt
+that
+links
+to
+cards
+settings
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_manage_credit_cards_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -3016,6 +3166,47 @@ string
 !
 -
 -
+Subtitle
+text
+displayed
+under
+the
+title
+of
+the
+saved
+card
+dialog
+.
+Parameter
+will
+be
+replaced
+by
+app
+name
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_save_credit_card_prompt_body_2
+"
+>
+%
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Address
 Autofill
 -
@@ -3112,6 +3303,39 @@ string
 Content
 description
 for
+expanding
+the
+saved
+addresses
+options
+in
+the
+select
+address
+prompt
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_expand_address_content_description_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
 collapsing
 the
 select
@@ -3146,6 +3370,39 @@ ignore
 =
 "
 UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+collapsing
+the
+saved
+address
+options
+in
+the
+select
+address
+prompt
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_collapse_address_content_description_2
 "
 >
 <
@@ -3254,6 +3511,51 @@ string
 -
 Title
 of
+an
+account
+picker
+dialog
+for
+identity
+credentials
+.
+The
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+provider
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_choose_account_for_provider
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
 the
 Identity
 Credential
@@ -3290,6 +3592,190 @@ mozac_feature_prompts_identity_credentials_privacy_policy_title
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+Identity
+Credential
+privacy
+policy
+dialog
+description
+.
+The
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+provider
+%
+2
+s
+will
+be
+replaced
+with
+the
+account
+%
+3
+s
+will
+be
+replaced
+with
+the
+privacy
+policy
+url
+and
+%
+4
+s
+will
+be
+replaced
+with
+the
+terms
+of
+service
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
+>
+<
+!
+[
+CDATA
+[
+%
+1
+s
+%
+2
+s
+<
+a
+href
+=
+"
+%
+3
+s
+"
+>
+<
+/
+a
+>
+<
+a
+href
+=
+"
+%
+4
+s
+"
+>
+<
+/
+a
+>
+]
+]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+positive
+button
+of
+the
+Identity
+Credential
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_continue
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+cancel
+button
+of
+the
+Identity
+Credential
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_cancel
+"
+>
 <
 /
 string
