--- a/mobile/android/fenix/app/src/main/res/values-sq/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sq/strings.xml
@@ -1664,6 +1664,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ve
 oria
@@ -1720,6 +1734,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 M
@@ -3652,6 +3680,66 @@ icon
 used
 to
 add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+Shtoni
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
 extensions
 .
 -
@@ -3663,6 +3751,20 @@ name
 =
 "
 browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Shtoni
@@ -52107,6 +52209,45 @@ string
 !
 -
 -
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Mjete
+Diagnostikimi
+Glean
+<
+/
+string
+>
+<
+!
+-
+-
 Messages
 explaining
 how
@@ -52245,6 +52386,150 @@ kreu
 dhe
 shtypni
 tastin
+p
+r
+mbrapsht
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Q
+t
+dilet
+t
+rhiqni
+q
+nga
+sip
+r
+&
+amp
+;
+p
+rdorni
+gjestin
+p
+r
+mbrapsht
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Q
+t
+dilet
+t
+rhiqni
+q
+nga
+sip
+r
+&
+amp
+;
+shtypni
 p
 r
 mbrapsht
