--- a/mobile/android/android-components/components/browser/toolbar2/src/main/res/values-ar/strings.xml
+++ b/mobile/android/android-components/components/browser/toolbar2/src/main/res/values-ar/strings.xml
@@ -26,6 +26,48 @@ resources
 -
 Content
 description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Description
+for
+the
+overflow
+menu
+button
+in
+the
+browser
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_menu_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
 :
 For
 the
@@ -43,6 +85,138 @@ name
 =
 "
 mozac_clear_button_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+:
+For
+the
+tracking
+protection
+toolbar
+icon
+it
+is
+set
+when
+the
+site
+has
+tracking
+protection
+enabled
+but
+none
+trackers
+have
+been
+blocked
+or
+detected
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_content_description_tracking_protection_on_no_trackers_blocked
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+:
+For
+the
+tracking
+protection
+toolbar
+icon
+it
+is
+set
+when
+the
+site
+has
+tracking
+protection
+enabled
+and
+trackers
+have
+been
+blocked
+or
+detected
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_content_description_tracking_protection_on_trackers_blocked1
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+:
+For
+the
+tracking
+protection
+toolbar
+icon
+it
+is
+set
+when
+the
+site
+has
+tracking
+protection
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_content_description_tracking_protection_off_for_a_site1
 "
 >
 <
@@ -78,6 +252,82 @@ name
 =
 "
 mozac_browser_toolbar_content_description_site_info
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Announcement
+made
+by
+the
+screen
+reader
+when
+the
+progress
+bar
+is
+shown
+and
+a
+page
+is
+loading
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_progress_loading
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+:
+For
+the
+autoplay
+toolbar
+icon
+it
+is
+set
+when
+the
+auto
+play
+permission
+is
+blocking
+content
+playing
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_content_description_autoplay_blocked
 "
 >
 <
