--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-ar/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-ar/strings.xml
@@ -2813,6 +2813,40 @@ string
 !
 -
 -
+The
+content
+of
+the
+"
+crash
+"
+notification
+in
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_content_text
+"
+>
+(
+)
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Button
 to
 re
@@ -3138,6 +3172,60 @@ name
 =
 "
 mozac_feature_addons_updater_notification_content_singular
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Name
+of
+the
+"
+notification
+channel
+"
+used
+for
+displaying
+a
+notification
+for
+updating
+an
+extension
+.
+See
+https
+:
+/
+/
+developer
+.
+android
+.
+com
+/
+training
+/
+notify
+-
+user
+/
+channels
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_updater_notification_channel_2
 "
 >
 <
@@ -3588,6 +3676,42 @@ string
 Error
 shown
 when
+something
+unexpected
+happened
+while
+trying
+to
+get
+the
+extension
+list
+from
+the
+server
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_failed_to_query_extensions
+"
+>
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+shown
+when
 unable
 to
 find
@@ -3734,6 +3858,154 @@ string
 -
 Text
 shown
+after
+failing
+to
+install
+an
+extension
+for
+which
+we
+don
+'
+t
+have
+its
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+a
+network
+error
+happened
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_network_error
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+the
+downloaded
+file
+is
+corrupted
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_corrupt_error
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+and
+an
+error
+occurred
+because
+the
+extension
+was
+not
+signed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_not_signed_error
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
 when
 attempting
 to
@@ -3837,6 +4109,64 @@ name
 =
 "
 mozac_feature_addons_blocklisted_1
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+can
+only
+be
+install
+via
+Enterprise
+Policies
+which
+is
+not
+supported
+on
+Android
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_admin_install_only
 "
 >
 %
@@ -4256,6 +4586,82 @@ ignore
 =
 "
 UnusedResources
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+not
+yet
+supported
+add
+-
+ons
+section
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_unsupported_caption_2
+"
+>
+1
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+not
+yet
+supported
+add
+-
+ons
+section
+-
+plural
+.
+%
+1
+s
+is
+the
+number
+of
+unsupported
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_unsupported_caption_plural_2
 "
 >
 %
