--- a/mobile/android/focus-android/app/src/main/res/values-ar/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-ar/strings.xml
@@ -885,6 +885,28 @@ menu_remove_from_shortcuts
 string
 >
 <
+!
+-
+-
+Menu
+item
+:
+Shows
+information
+about
+features
+and
+changes
+that
+are
+new
+to
+this
+version
+-
+-
+>
+<
 string
 name
 =
@@ -1261,71 +1283,16 @@ share_dialog_title
 string
 >
 <
-!
--
--
-While
-a
-browsing
-session
-is
-active
-(
-in
-the
-foreground
-or
-background
-)
-we
-will
-show
-a
-notification
-so
-that
-the
-user
-doesn
-'
-t
-forget
-about
-the
-website
-still
-being
-open
-.
-This
-text
-is
-shown
-in
-the
-notification
-.
-Clicking
-the
-notification
-will
-have
-the
-same
-effect
-as
-clicking
-the
+string
+name
+=
 "
-erase
+notification_erase_title_android_14
 "
-button
-in
-the
-application
-.
--
--
+>
+<
+/
+string
 >
 <
 string
@@ -1649,6 +1616,292 @@ string
 !
 -
 -
+This
+is
+the
+label
+of
+an
+action
+we
+offer
+when
+the
+user
+selects
+text
+in
+other
+third
+-
+party
+apps
+.
+Focus
+is
+hard
+coded
+since
+we
+can
+'
+t
+use
+variables
+in
+this
+context
+.
+Do
+not
+translate
+or
+transliterate
+Focus
+.
+-
+-
+>
+<
+string
+name
+=
+"
+text_selection_search_action_focus
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Focus
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+label
+of
+an
+action
+we
+offer
+when
+the
+user
+selects
+text
+in
+other
+third
+-
+party
+apps
+.
+Klar
+is
+hard
+coded
+since
+we
+can
+'
+t
+use
+variables
+in
+this
+context
+.
+Do
+not
+translate
+or
+transliterate
+Klar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Klar
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+label
+of
+an
+action
+we
+offer
+when
+the
+user
+selects
+text
+in
+other
+third
+-
+party
+apps
+.
+Focus
+Beta
+is
+hard
+coded
+since
+we
+can
+'
+t
+use
+variables
+in
+this
+context
+.
+Do
+not
+translate
+or
+transliterate
+Focus
+Beta
+.
+-
+-
+>
+<
+string
+name
+=
+"
+text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Focus
+Beta
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+label
+of
+an
+action
+we
+offer
+when
+the
+user
+selects
+text
+in
+other
+third
+-
+party
+apps
+.
+Focus
+Nightly
+is
+hard
+coded
+since
+we
+can
+'
+t
+use
+variables
+in
+this
+context
+.
+Do
+not
+translate
+or
+transliterate
+Focus
+Nightly
+.
+-
+-
+>
+<
+string
+name
+=
+"
+text_selection_search_action_focus_nightly
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Focus
+Nightly
+<
+/
+string
+>
+<
+!
+-
+-
 Content
 of
 about
@@ -1691,6 +1944,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -3599,6 +3859,114 @@ string
 -
 -
 Preference
+Summary
+:
+Biometrics
+(
+iris
+scan
+fingerprint
+or
+facial
+scan
+)
+can
+be
+used
+to
+unlock
+Focus
+if
+the
+app
+had
+a
+URL
+open
+when
+the
+app
+was
+last
+run
+to
+ensure
+that
+only
+the
+phone
+'
+s
+owner
+can
+view
+a
+previous
+session
+.
+%
+s
+will
+be
+replaced
+by
+the
+app
+name
+(
+e
+.
+g
+.
+Firefox
+Focus
+)
+Shortcuts
+is
+a
+feature
+that
+allows
+the
+user
+to
+pin
+his
+favorite
+websites
+to
+Focus
+home
+screen
+so
+he
+can
+quickly
+access
+them
+-
+-
+>
+<
+string
+name
+=
+"
+preference_security_biometric_summary2
+"
+>
+%
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
 Title
 :
 Secure
@@ -4093,6 +4461,104 @@ name
 preference_privacy_notice
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+In
+-
+app
+link
+(
+in
+settings
+)
+to
+Focus
+licensing
+information
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_licensing_info
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Link
+to
+Focus
+licensing
+information
+from
+other
+libraries
+that
+we
+use
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_libraries_we_use
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Open
+Source
+Licenses
+page
+title
+.
+The
+first
+parameter
+is
+the
+app
+name
+-
+-
+>
+<
+string
+name
+=
+"
+open_source_licenses_title
+"
+>
+%
+s
+|
 <
 /
 string
@@ -5640,11 +6106,408 @@ download_snackbar_open
 string
 >
 <
+!
+-
+-
+Snackbar
+that
+will
+be
+displayed
+after
+a
+website
+has
+been
+added
+to
+shortcuts
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_added_to_shortcuts
+"
+>
+!
+<
+/
+string
+>
+<
 string
 name
 =
 "
 error_hostLookup_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+This
+is
+the
+description
+for
+the
+close
+button
+from
+the
+new
+onboarding
+flow
+screen
+one
+and
+two
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_close_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+first
+screen
+title
+-
+-
+>
+<
+!
+-
+-
+%
+1
+s
+will
+be
+replaced
+by
+the
+app
+name
+and
+build
+variant
+(
+e
+.
+g
+.
+Firefox
+Focus
+Firefox
+Klar
+Nightly
+)
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_title
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+first
+screen
+subtitle
+the
+one
+that
+appears
+under
+title
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_subtitle
+"
+>
+.
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+first
+screen
+button
+label
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+second
+screen
+:
+Title
+-
+-
+>
+<
+!
+-
+-
+%
+1
+s
+will
+be
+replaced
+by
+the
+app
+short
+name
+(
+Focus
+)
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_second_screen_title
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+second
+screen
+subtitle
+the
+one
+that
+appears
+under
+title
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_second_screen_subtitle_one
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+second
+screen
+subtitle
+two
+the
+one
+that
+appears
+under
+subtitle
+one
+-
+-
+>
+<
+!
+-
+-
+%
+1
+s
+will
+be
+replaced
+by
+the
+app
+short
+name
+(
+Focus
+)
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_second_screen_subtitle_two
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+second
+screen
+make
+Focus
+default
+browser
+button
+label
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_second_screen_default_browser_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+second
+screen
+skip
+onboarding
+button
+label
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_second_screen_skip_button_text
 "
 >
 <
@@ -6563,6 +7426,46 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -6621,6 +7524,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -6767,6 +7677,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -6878,6 +7795,14 @@ name
 "
 your_rights_content3
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -6976,6 +7901,13 @@ name
 =
 "
 your_rights_content4
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -7101,6 +8033,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -7807,6 +8746,837 @@ string
 -
 Preference
 for
+cookie
+banner
+.
+The
+name
+of
+the
+item
+from
+settings
+screen
+and
+the
+title
+of
+the
+cookie
+banner
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_cookie_banner
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+summary
+for
+the
+cookie
+banner
+.
+If
+the
+cookie
+banner
+option
+is
+not
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_cookie_banner_summary_on
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+summary
+for
+the
+cookie
+banner
+.
+If
+the
+cookie
+banner
+option
+is
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_cookie_banner_summary_off
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+preference
+inside
+Cookie
+banner
+reduction
+screen
+.
+Here
+you
+can
+set
+the
+cookie
+banner
+option
+to
+disabled
+or
+reject_all
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_reject_all_option_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+removing
+cookie
+/
+consent
+banners
+from
+sites
+automatically
+this
+is
+shown
+as
+part
+of
+the
+protections
+panel
+with
+the
+tracking
+protection
+toggle
+.
+-
+-
+>
+-
+-
+&
+gt
+;
+<
+string
+name
+=
+"
+cookie_banner_exception_item_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+indicating
+cookie
+banner
+handling
+is
+on
+this
+site
+this
+is
+shown
+as
+part
+of
+the
+protections
+panel
+with
+the
+tracking
+protection
+toggle
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_item_description_state_on
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+indicating
+cookie
+reducer
+is
+not
+supported
+on
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+protections
+panel
+with
+the
+tracking
+protection
+toggle
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_site_not_supported
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+indicating
+cookie
+banner
+handling
+is
+off
+this
+site
+this
+is
+shown
+as
+part
+of
+the
+protections
+panel
+with
+the
+tracking
+protection
+toggle
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_item_description_state_off
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+removing
+cookie
+/
+consent
+banners
+from
+sites
+automatically
+this
+is
+shown
+when
+the
+user
+enters
+in
+details
+after
+he
+clicks
+on
+the
+item
+from
+protection
+panel
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_switch_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+indicating
+cookie
+banner
+handling
+is
+off
+this
+site
+this
+is
+shown
+when
+the
+user
+enters
+in
+details
+after
+he
+clicks
+on
+the
+item
+from
+protection
+panel
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_switch_state_off
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+indicating
+cookie
+banner
+handling
+is
+on
+this
+site
+this
+is
+shown
+when
+the
+user
+enters
+in
+details
+after
+he
+clicks
+on
+the
+item
+from
+protection
+panel
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_switch_state_on
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+text
+for
+a
+detail
+explanation
+indicating
+cookie
+banner
+handling
+is
+on
+this
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+first
+parameter
+is
+a
+shortened
+URL
+of
+the
+current
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_title_state_on_for_site
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+text
+for
+a
+detail
+explanation
+indicating
+cookie
+banner
+handling
+is
+off
+this
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+first
+parameter
+is
+a
+shortened
+URL
+of
+the
+current
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_title_state_off_for_site
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+cancel
+button
+indicating
+that
+cookie
+banner
+reduction
+is
+not
+supported
+for
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_site_is_not_supported_cancel_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+request
+support
+button
+indicating
+that
+cookie
+banner
+reduction
+is
+not
+supported
+for
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_site_is_not_supported_request_support_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+snackBar
+after
+the
+user
+reports
+with
+success
+a
+website
+where
+cookie
+banner
+reducer
+did
+not
+work
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_report_a_site_snackbar_label
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+cookie
+banner
+item
+from
+tracking
+protection
+after
+the
+user
+reports
+with
+success
+a
+website
+where
+cookie
+banner
+reducer
+did
+not
+work
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_the_site_was_reported
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+CFR
+for
+Cookie
+Banner
+(
+Banner
+Info
+Message
+)
+.
+This
+string
+is
+used
+as
+text
+for
+a
+link
+in
+cfr_cookie_banner
+and
+takes
+the
+user
+to
+the
+app
+settings
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_cookie_banner_link
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
 autoplay
 -
 -
@@ -7817,6 +9587,447 @@ name
 =
 "
 preference_autoplay
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Heading
+for
+the
+instructions
+to
+allow
+a
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+phone_feature_blocked_intro
+"
+>
+:
+<
+/
+string
+>
+<
+!
+-
+-
+First
+step
+for
+the
+allowing
+a
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+phone_feature_blocked_step_settings
+"
+>
+1
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Second
+step
+for
+the
+allowing
+a
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+phone_feature_blocked_step_permissions
+"
+>
+<
+!
+[
+CDATA
+[
+2
+.
+<
+b
+>
+<
+/
+b
+>
+]
+]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+label
+that
+take
+the
+user
+to
+the
+Android
+App
+setting
+-
+-
+>
+<
+string
+name
+=
+"
+phone_feature_go_to_settings
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Third
+step
+for
+allowing
+a
+permission
+.
+The
+placeholder
+will
+be
+updated
+by
+for
+example
+"
+Camera
+"
+-
+-
+>
+<
+string
+name
+=
+"
+phone_feature_blocked_step_feature
+"
+>
+<
+!
+[
+CDATA
+[
+3
+.
+<
+b
+>
+%
+1
+s
+<
+/
+b
+>
+/
+]
+]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+camera
+access
+for
+all
+websites
+-
+-
+>
+<
+string
+name
+=
+"
+preference_phone_feature_camera
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+microphone
+access
+for
+all
+websites
+-
+-
+>
+<
+string
+name
+=
+"
+preference_phone_feature_microphone
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+location
+access
+for
+all
+websites
+-
+-
+>
+<
+string
+name
+=
+"
+preference_phone_feature_location
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+notification
+access
+for
+all
+websites
+-
+-
+>
+<
+string
+name
+=
+"
+preference_phone_feature_notification
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+EME
+access
+for
+all
+websites
+-
+-
+>
+<
+string
+name
+=
+"
+preference_phone_feature_media_key_system_access
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+that
+indicates
+that
+a
+permission
+must
+be
+asked
+always
+-
+-
+>
+<
+string
+name
+=
+"
+preference_option_phone_feature_ask_to_allow
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+that
+indicates
+that
+a
+permission
+must
+be
+blocked
+-
+-
+>
+<
+string
+name
+=
+"
+preference_option_phone_feature_blocked
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+that
+indicates
+that
+a
+permission
+must
+be
+allowed
+-
+-
+>
+<
+string
+name
+=
+"
+preference_option_phone_feature_allowed
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+that
+indicates
+a
+permission
+is
+by
+the
+Android
+OS
+-
+-
+>
+<
+string
+name
+=
+"
+phone_feature_blocked_by_android
 "
 >
 <
@@ -7965,6 +10176,13 @@ name
 =
 "
 preference_studies_summary
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
@@ -8149,6 +10367,86 @@ preference_remote_debugging
 -
 /
 USB
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+Button
+for
+show
+biometric
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+show_biometric_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+text
+for
+biometric
+prompt
+pop
+-
+up
+-
+-
+>
+<
+string
+name
+=
+"
+biometric_prompt_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Subtitle
+text
+for
+biometric
+prompt
+pop
+-
+up
+-
+-
+>
+<
+string
+name
+=
+"
+biometric_prompt_subtitle
+"
+>
+.
 <
 /
 string
@@ -8968,6 +11266,51 @@ string
 !
 -
 -
+Text
+displayed
+in
+a
+notification
+when
+the
+user
+enters
+full
+screen
+mode
+-
+-
+>
+<
+string
+name
+=
+"
+full_screen_notification
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Preference
 for
 switching
@@ -9101,6 +11444,26 @@ HTTPS
 <
 /
 string
+>
+<
+!
+-
+-
+Description
+of
+the
+preference
+to
+enable
+"
+HTTPS
+-
+Only
+"
+mode
+.
+-
+-
 >
 <
 string
@@ -10141,6 +12504,86 @@ string
 !
 -
 -
+The
+title
+of
+the
+error
+page
+for
+websites
+that
+do
+not
+support
+HTTPS
+when
+HTTPS
+-
+Only
+is
+turned
+on
+-
+-
+>
+<
+string
+name
+=
+"
+errorpage_httpsonly_title2
+"
+>
+HTTPS
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+the
+error
+page
+shown
+when
+a
+website
+has
+an
+invalid
+or
+expired
+SSL
+certificate
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_security_bad_cert_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Sessions
 List
 -
@@ -10190,11 +12633,292 @@ string
 !
 -
 -
+Contextual
+Feature
+Recommendation
+Popups
+-
+-
+>
+<
+!
+-
+-
+CFR
+for
+Toolbar
+Shield
+Icon
+(
+Banner
+Info
+Message
+)
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_for_toolbar_shield_icon2
+"
+>
+!
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Button
+that
+closes
+the
+CFR
+popup
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_close_button_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Tool
+Tip
+for
+:
+Privacy
+and
+Security
+Settings
+Screen
+task
+:
+https
+:
+/
+/
+github
+.
+com
+/
+mozilla
+-
+mobile
+/
+focus
+-
+android
+/
+issues
+/
+6211
+-
+-
+>
+<
+!
+-
+-
+Tool
+Tip
+Title
+-
+-
+>
+<
+string
+name
+=
+"
+tool_tip_title
+"
+>
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Tool
+Tip
+Message
+-
+-
+>
+<
+string
+name
+=
+"
+tool_tip_message
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Tool
+Tip
+"
+X
+"
+button
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Button
+that
+closes
+the
+tool
+tip
+-
+-
+>
+<
+string
+name
+=
+"
+tool_tip_dismiss_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Promote
 SearchWidget
 Dialog
 -
 -
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+This
+is
+the
+description
+for
+the
+close
+button
+from
+promote
+search
+widget
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+promote_search_widget_dialog_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+title
+of
+promote
+search
+widget
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+promote_search_widget_dialog_title
+"
+>
+!
+<
+/
+string
 >
 <
 /
