--- a/mobile/android/focus-android/app/src/main/res/values-sq/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-sq/strings.xml
@@ -16526,6 +16526,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Q
 t
@@ -16580,6 +16594,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Q
 t
@@ -16598,6 +16626,150 @@ kreu
 dhe
 shtypni
 tastin
+p
+r
+mbrapsht
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Q
+t
+dilet
+t
+rhiqni
+q
+nga
+sip
+r
+&
+amp
+;
+p
+rdorni
+gjestin
+p
+r
+mbrapsht
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Q
+t
+dilet
+t
+rhiqni
+q
+nga
+sip
+r
+&
+amp
+;
+shtypni
 p
 r
 mbrapsht
