no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 6ce2ef9fae7f7052ae4aa265daab94e0b56750f7

--- a/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
@@ -3342,6 +3342,47 @@ etc
 .
 )
 :
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+Jepysokue
+je
+epor
+pyre
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
 Label
 for
 plus
@@ -19657,6 +19698,51 @@ string
 Unsubmitted
 crash
 dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+o
+emo
+epyr
+jey
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
 negative
 button
 to
@@ -20986,6 +21072,36 @@ tem
 s
 peg
 uar
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+Ndaip
+ri
+gueteri
+techaukaha
 <
 /
 string
@@ -50169,6 +50285,46 @@ debug_drawer_cfr_tools_reset_cfr_title
 >
 Eguerujey
 CFRs
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Tembiporu
+mopot
+ha
+Glean
 <
 /
 string
