no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: c72250bf66d54c30a66429f22fc58c0b0fe790f4

--- a/mobile/android/fenix/app/src/main/res/values-is/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-is/strings.xml
@@ -1624,6 +1624,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 flugasti
 pers
@@ -1674,6 +1688,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 L
@@ -2046,6 +2074,20 @@ name
 "
 tablet_nav_bar_cfr_title
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 N
 tt
@@ -2092,6 +2134,20 @@ name
 =
 "
 tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Nj
@@ -3516,6 +3572,169 @@ browser_menu_manage_extensions
 S
 sla
 me
+forritsauka
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+Forritsaukar
+sem
+m
+lt
+er
+me
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+B
+ta
+vi
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+B
+ta
+vi
 forritsauka
 <
 /
@@ -5097,9 +5316,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -6669,6 +6888,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 Kynntu
@@ -15563,6 +15789,77 @@ string
 !
 -
 -
+Preference
+switch
+title
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_title
+"
+>
+Senda
+hrunsk
+rslur
+sj
+lfkrafa
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+switch
+description
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_description
+"
+>
+Deilir
+hrung
+gnum
+sj
+lfkrafa
+me
+Mozilla
+vi
+r
+singu
+eftir
+hrun
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 studies
@@ -20022,6 +20319,148 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+urfti
+a
+endurr
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+Senda
+hrunsk
+rslur
+inn
+sj
+lfkrafa
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+Loka
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
+"
+>
+Senda
+hrunsk
+rslu
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -21224,6 +21663,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 Loka
 b
@@ -21302,6 +21755,234 @@ avalmynd
 fyrir
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+Engin
+b
+kamerki
+enn
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+not
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_description
+"
+>
+Vista
+u
+vefsv
+i
+egar
+vafrar
+.
+Skr
+u
+ig
+inn
+til
+a
+s
+kja
+b
+kamerki
+r
+rum
+samstilltum
+t
+kjum
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+Skr
+u
+ig
+inn
+til
+a
+samstilla
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_authenticated_description
+"
+>
+Vista
+u
+vefsv
+i
+egar
+vafrar
+.
+Vi
+s
+kjum
+einnig
+b
+kamerki
+r
+rum
+samstilltum
+t
+kjum
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+B
+ttu
+vi
+b
+kamerkjum
+me
+an
+vafrar
+svo
+getir
+fundi
+upp
+haldsvefina
+na
+s
+ar
+.
 <
 /
 string
@@ -42668,6 +43349,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sj
 u
@@ -42722,6 +43417,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -42764,6 +43466,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Eru
@@ -42818,6 +43534,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -50041,6 +50764,40 @@ string
 !
 -
 -
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+g
+nota
+ekki
+samstillingu
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 shown
 in
@@ -50177,6 +50934,136 @@ a
 eins
 rstutta
 stund
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Hj
+lpa
+u
+okkur
+a
+gera
+leitina
+Firefox
+betri
+.
+a
+tekur
+a
+eins
+eina
+m
+n
+tu
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Hj
+lpa
+u
+okkur
+a
+gera
+samstillinguna
+Firefox
+betri
+.
+a
+tekur
+a
+eins
+eina
+m
+n
+tu
 <
 /
 string
@@ -50356,6 +51243,66 @@ ur
 ertu
 me
 leitareiginleika
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Hversu
+n
+g
+/
+ur
+ertu
+me
+samstillingareiginleikana
 Firefox
 ?
 <
@@ -50833,6 +51780,45 @@ Endurstilla
 CFR
 -
 verkf
+ri
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+villuleitarverkf
 ri
 <
 /
