--- a/mobile/android/focus-android/app/src/main/res/values-ixl/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-ixl/strings.xml
@@ -1045,6 +1045,28 @@ alejata
 string
 >
 <
+!
+-
+-
+Menu
+item
+:
+Shows
+information
+about
+features
+and
+changes
+that
+are
+new
+to
+this
+version
+-
+-
+>
+<
 string
 name
 =
@@ -1508,71 +1530,136 @@ tuk
 string
 >
 <
+string
+name
+=
+"
+notification_erase_title_android_14
+"
+>
+La
+sojsa
+unq
+a
+vee
+chukeltu
+ve
+te
+?
+<
+/
+string
+>
+<
+string
+name
+=
+"
+notification_erase_text_android_14
+"
+moz
+:
+RemovedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Kana
+moj
+sojsa
+unq
+a
+vaa
+ni
+alon
+see
+uva
+pajlat
+kuxh
+la
+sojsa
+unq
+a
+vee
+chukeltu
+ve
+te
+.
+<
+/
+string
+>
+<
 !
 -
 -
-While
+Text
+shown
+in
+the
+notification
+description
+that
+pops
+up
+to
+remind
+the
+user
+that
 a
 browsing
 session
 is
 active
-(
-in
-the
-foreground
-or
-background
-)
-we
-will
-show
+for
+Android
+14
++
+.
+-
+-
+>
+<
+string
+name
+=
+"
+notification_erase_text_android_14_1
+"
+>
+Kana
+moj
+sojsa
+unq
 a
-notification
-so
-that
-the
-user
-doesn
-'
-t
-forget
-about
-the
-website
-still
-being
-open
+vaa
+ni
+alon
+see
+uva
+pajlat
+kuxh
+la
+sojsa
+unq
+a
+vee
+chukeltu
+ve
+te
 .
-This
-text
-is
-shown
-in
-the
-notification
-.
-Clicking
-the
-notification
-will
-have
-the
-same
-effect
-as
-clicking
-the
-"
-erase
-"
-button
-in
-the
-application
-.
--
--
+<
+/
+string
 >
 <
 string
@@ -1998,6 +2085,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 La
 chuk
@@ -2063,6 +2157,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 La
@@ -2131,6 +2232,13 @@ name
 =
 "
 text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 La
@@ -2201,6 +2309,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 La
 chuk
@@ -2257,6 +2372,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -8341,6 +8463,56 @@ Jaja
 string
 >
 <
+!
+-
+-
+Snackbar
+that
+will
+be
+displayed
+after
+a
+website
+has
+been
+added
+to
+shortcuts
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_added_to_shortcuts
+"
+>
+At
+ve
+t
+ok
+xo
+l
+unq
+a
+vee
+uva
+jik
+kuxh
+la
+lej
+ve
+te
+!
+<
+/
+string
+>
+<
 string
 name
 =
@@ -10117,6 +10289,54 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+Jup
+ka
+t
+unq
+a
+vee
+jajle
+le
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -10175,6 +10395,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Eq
@@ -10350,6 +10577,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -10504,6 +10738,14 @@ name
 "
 your_rights_content3
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -10643,6 +10885,13 @@ name
 =
 "
 your_rights_content4
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -10789,6 +11038,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -13893,6 +14149,13 @@ name
 "
 preference_studies_summary
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 U
 Firefox
@@ -15449,6 +15712,20 @@ name
 =
 "
 full_screen_notification
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 La
@@ -17106,6 +17383,13 @@ name
 "
 errorpage_httpsonly_message2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -18324,6 +18608,310 @@ teb
 al
 aq
 on
+<
+/
+string
+>
+<
+!
+-
+-
+Messages
+explaining
+how
+to
+exit
+fullscreen
+mode
+-
+-
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Aq
+al
+uva
+la
+el
+axh
+pajlat
+kuxh
+tu
+kaajayil
+vi
+vatze
+eq
+o
+kutzan
+stiib
+a
+as
+a
+la
+jiti
+kat
+ti
+iqul
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Aq
+al
+uva
+la
+el
+axh
+tu
+kaajayil
+vi
+vatze
+jiti
+ku
+tzan
+stiib
+a
+as
+la
+laa
+u
+tecla
+uve
+ni
+q
+aavisan
+ti
+iqul
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Jiti
+ku
+tzan
+stiib
+a
+as
+laa
+ti
+iq
+aav
+ti
+iqul
+aq
+al
+la
+el
+ch
+u
+l
+axh
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Jiti
+ku
+tzan
+stiib
+a
+as
+laa
+ti
+iqul
+aq
+al
+la
+elch
+u
+l
+axh
 <
 /
 string
