--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-is/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-is/strings.xml
@@ -1063,75 +1063,6 @@ string
 name
 =
 "
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-B
-ta
-notandanafni
-vi
-vista
-lykilor
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-username
-for
-an
-existing
-login
-without
-a
-username
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_login_add_username_headline_2
 "
 >
@@ -2458,63 +2389,6 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password
-"
-moz
-:
-removedIn
-=
-"
-128
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Stinga
-upp
-sterku
-lykilor
-i
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-suggest
-strong
-password
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-suggested
-strong
-password
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompts_suggest_strong_password_2
 "
 >
@@ -2626,14 +2500,14 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description
+mozac_feature_prompts_suggest_strong_password_description_2
 "
 moz
 :
 removedIn
 =
 "
-130
+133
 "
 tools
 :
@@ -2662,20 +2536,16 @@ af
 handah
 fi
 .
-Haf
-u
-lykilor
-in
-n
-innan
-handar
-me
-v
 a
+ver
+ur
 vista
-au
 reikningnum
 num
+til
+notkunar
+framt
+inni
 .
 <
 /
@@ -2702,13 +2572,13 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description_2
+mozac_feature_prompts_suggest_strong_password_description_3
 "
 >
 Vernda
 u
-reikningana
-na
+reikninginn
+inn
 me
 v
 a
@@ -4131,6 +4001,13 @@ name
 =
 "
 mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
