--- a/mobile/android/focus-android/app/src/main/res/values-is/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-is/strings.xml
@@ -16324,6 +16324,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Til
 a
@@ -16372,6 +16386,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Til
 a
@@ -16391,6 +16419,142 @@ til
 -
 baka
 hnappinn
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Drag
+u
+a
+ofan
+og
+nota
+u
+aftur
+-
+bendingu
+til
+a
+h
+tta
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Drag
+u
+a
+ofan
+og
+ttu
+til
+baka
+til
+a
+h
+tta
 <
 /
 string
